tests/ui/link-native-libs/modifiers-override-2.rs
//@ compile-flags:-lstatic:+whole-archive,-whole-archive=foo

fn main() {}

//~? ERROR multiple `whole-archive` modifiers in a single `-l` option
